Finish lab1 assignment

--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<!--Your name.
+	A brief description of you in 1-2 sentences.
+	A list of classes you are taking right now at Etown.
+	Your 4 favorite movies, books, games, and TV shows.
+	Make at least one link to an interesting site about that favorite movie/book/game/show
+	Two images that represent when you're happy and sad
+	Something about one of your neighbors (students sitting next to you).
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +16,52 @@
 	<title>Document</title>
 </head>
 <body>
-	
+	<div id="intro">
+		<h1>Ethan Lajeunesse</h1>
+		<p>I am a 2nd year computer science student at Elizabethtown College.</p>
+	</div>
+	<hr>
+	<div id="classes">
+	<h2>My Classes</h2>
+		<ul>
+			<li>CS 310 - Web Development</li>
+			<li>CS 209 - Database Systems</li>
+			<li>CS 221 - Data Structures</li>
+			<li>MU 205 - World Music</li>
+		</ul>
+	</div>
+	<div id="movies">
+		<h2>My Favorite Movies</h2>
+		<ol>
+			<li>Iron Man 1</li>
+			<li>Iron Man 2</li>
+			<li>Iron Man 3</li>
+			<li><a href="https://www.imdb.com/title/tt0848228/">The Avengers</a></li>
+		</ol>
+	</div>
+	<div id="moods">
+		<h2>My Moods</h2>
+		<table>
+			<tr>
+				<th>Happy</th>
+				<th>Sad</th>
+			</tr>
+			<tr>
+				<td>
+					<img src="happy.jpg" alt="happy" title="happy" height="200px">
+				</td>
+				<td>
+					<img src="sad.jpg" alt="sad" title="sad" height="200px">
+				</td>
+			</tr>
+		</table>
+	</div>
+	<div id="neighbors">
+		<h2>Fun Facts About Neighbors</h2>
+		<ul>
+			<li>Imaginary student #1 loves to drive</li>
+			<li>Imaginary student #2 loves to ski</li>
+		</ul>
+	</div>
 </body>
 </html>
